gcc/testsuite/gcc.target/powerpc/pr48344-1.c
@@ -1,0 +1,8 @@
+/* { dg-do compile } */
+/* { dg-options "-fstack-limit-register=r2" } */
+void foo ()
+{
+  int N = 2;
+  int slots[N];
+
+}
